Adding new song returns this song
